# dhscanner.kbapi

./: Dockerfile  README.md  dhscanner-kbapi.cabal  query.schema.json  query_result.schema.json
.github/workflows/: schema.yml
json-schema-creator/: Main.hs
src/: Content.hs  Kbapi.hs
